--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -6,6 +6,7 @@
     padding: 0%;
 }
 
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -19,13 +20,13 @@ input[type=number] {
 
 
 html, body {
+    align-self: center;
+    align-content: center;
+    align-items: center;
     margin:0;
     padding:0;
     font-weight: 400;
     overflow-x: hidden;
-    display: flex;
-    justify-content: space-around;
-        
 }
 
 .flex{
@@ -57,7 +58,9 @@ input{
 
 table{
     margin: auto;
-    border: 2px solid;
+    border-left: 20px solid ;
+    border-right: 20px solid ;
+    border-bottom: 20px solid ;
     
 }
 
@@ -74,16 +77,16 @@ td{
 
 .sim{
     background-color: #f7eee0; 
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: min-content;
+    margin: 100px;
+    margin-top: 50px;
+    /* width: 100%; */
     height: min-content;
     border-left: 25px solid ;
     border-right: 25px solid ;
     border-bottom: 25px solid ;
     border-color: #634380;
     box-shadow: 5px 10px 8px #888888;
-    position: relative;
+    position: absolute;
 }
 
 .sim_table{
@@ -291,7 +294,7 @@ input[type="range"] {
 
 #enable{
     background-color: #ca2222;
-    padding: 45px;
+    padding: 35px;
     padding-top: 0px;
     padding-bottom: 0px;
     width: 80%;
@@ -304,7 +307,7 @@ input[type="range"] {
 
 #purze{
     background-color: #079bff;
-    padding: 10px;
+    padding: 10px 35px;
     border: 0px;
     height: 70%;
     border-radius: 5px;
@@ -416,11 +419,3 @@ input {
 }
 
 
-
-.paused-animation {
-    animation-play-state: paused;
-  }
-
-/* @media screen and (max-width : 1330px){
-    
-} */
